# urg_node

./: CMakeLists.txt  README.md  package.xml
config/: urg_node_ethernet.yaml
launch/: launch_lidar.launch.py  urg_node.launch.py  view_robot.launch.py
rviz/: lidar.rviz  rviz.rviz  view_robot.rviz
urdf/: hokuyo_laser.urdf.xacro  hokuyo_ust10.urdf.xacro  materials.urdf.xacro
